--- a/src/main/resources/theme/leaderboard/leaderboard.fxml
+++ b/src/main/resources/theme/leaderboard/leaderboard.fxml
@@ -24,7 +24,7 @@
           <columns>
             <TableColumn fx:id="rankColumn" text="Rank" />
             <TableColumn fx:id="nameColumn" text="Name" />
-            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" />
+            <TableColumn fx:id="winLossColumn" text="Win/Loss Ratio" visible="false"/>
             <TableColumn fx:id="gamesPlayedColumn" text="Games Played" />
             <TableColumn fx:id="ratingColumn" text="Rating" />
           </columns>
