#572 Fix coop replay button

--- a/src/main/resources/theme/play/coop/replay_button.fxml
+++ b/src/main/resources/theme/play/coop/replay_button.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.Button?>
-
-
-<Button fx:id="buttonRoot" mnemonicParsing="false" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" />
+<Button xmlns:fx="http://javafx.com/fxml/1" fx:id="replayButtonRoot" mnemonicParsing="false" text=""
+        styleClass="icon-button"
+        onAction="#onClicked" xmlns="http://javafx.com/javafx/8.0.111"
+        fx:controller="com.faforever.client.coop.ReplayButtonController"/>
