--- a/src/main/resources/theme/enter_password.fxml
+++ b/src/main/resources/theme/enter_password.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="enterPasswordRoot" styleClass="immediate-notification"
-      xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.game.EnterPasswordController">
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="enterPasswordRoot" spacing="20.0" styleClass="immediate-notification"
+      xmlns="http://javafx.com/javafx/8.0.111" fx:controller="com.faforever.client.game.EnterPasswordController">
   <children>
-    <Label fx:id="titleLabel" styleClass="header" text="%game.join.passwordPrompt"/>
+    <Label fx:id="titleLabel" styleClass="header" text="%game.join.passwordTitle"/>
     <Separator/>
     <VBox spacing="20.0" styleClass="content">
       <children>
@@ -17,10 +18,10 @@
                maxWidth="1.7976931348623157E308" prefHeight="22.0" prefWidth="225.0" text="%game.join.passwordWrong"
                wrapText="true">
           <graphic>
-              <Label styleClass="icon,notification-icon,warn" text=""/>
+            <Label styleClass="icon,notification-icon,warn" text=""/>
           </graphic>
         </Label>
-        <PasswordField fx:id="passwordField"/>
+        <PasswordField fx:id="passwordField" promptText="%game.join.passwordPrompt"/>
       </children>
     </VBox>
     <ButtonBar fx:id="buttonBar">
@@ -32,4 +33,7 @@
       </buttons>
     </ButtonBar>
   </children>
+  <padding>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+  </padding>
 </VBox>
