--- a/src/main/resources/theme/vault/map/map_detail.fxml
+++ b/src/main/resources/theme/vault/map/map_detail.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
@@ -67,20 +68,18 @@
                                           <Label styleClass="icon" text=""/>
                                       </graphic>
                                   </Label>
-                                  <Label fx:id="timeLabel" graphicTextGap="10.0" text="&lt;Time&gt;"
-                                         GridPane.columnIndex="4" GridPane.rowIndex="2">
-                                      <graphic>
-                                          <Label styleClass="icon" text=""/>
-                                      </graphic>
-                                  </Label>
-                                  <Button fx:id="uninstallButton" mnemonicParsing="false"
-                                          onAction="#onUninstallButtonClicked" text="%mapVault.uninstall"
-                                          GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                          GridPane.halignment="RIGHT" GridPane.valignment="TOP"/>
-                                  <Button fx:id="installButton" defaultButton="true" mnemonicParsing="false"
-                                          onAction="#onInstallButtonClicked" text="%mapVault.installButtonFormat"
-                                          GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                          GridPane.halignment="RIGHT" GridPane.valignment="TOP"/>
+                                  <HBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="1"
+                                        GridPane.columnSpan="2147483647">
+                                      <children>
+                                          <Button fx:id="createGameButton" defaultButton="true" mnemonicParsing="false"
+                                                  onAction="#onCreateGameButtonClicked" text="%games.create"/>
+                                          <Button fx:id="installButton" defaultButton="true" mnemonicParsing="false"
+                                                  onAction="#onInstallButtonClicked"
+                                                  text="%mapVault.installButtonFormat"/>
+                                          <Button fx:id="uninstallButton" mnemonicParsing="false"
+                                                  onAction="#onUninstallButtonClicked" text="%mapVault.uninstall"/>
+                                      </children>
+                                  </HBox>
                                   <VBox alignment="CENTER_LEFT" maxWidth="300.0" GridPane.columnIndex="1"
                                         GridPane.columnSpan="2147483647" GridPane.halignment="RIGHT"
                                         GridPane.valignment="TOP">
