Added a Label to the players bar in the rating distribution

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -1504,6 +1504,10 @@
   -fx-bar-fill: #FFA500;
 }
 
+#1v1-you-text {
+  -fx-fill: -primary-text-color;
+}
+
 /***************** Hint *****************/
 
 .hint {
