--- a/src/main/resources/theme/chat/chat_user_context_menu.fxml
+++ b/src/main/resources/theme/chat/chat_user_context_menu.fxml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.CustomMenuItem?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<ContextMenu xmlns:fx="http://javafx.com/fxml/1" fx:id="chatUserContextMenuRoot" xmlns="http://javafx.com/javafx/8.0.40"
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<ContextMenu xmlns:fx="http://javafx.com/fxml/1" fx:id="chatUserContextMenuRoot"
+             xmlns="http://javafx.com/javafx/8.0.112"
              fx:controller="com.faforever.client.chat.ChatUserContextMenuController">
   <items>
     <MenuItem mnemonicParsing="false" onAction="#onUserInfo" text="%chat.userContext.userInfo" />
@@ -29,17 +35,38 @@
     <MenuItem fx:id="watchGameItem" mnemonicParsing="false" onAction="#onWatchGame" text="%chat.userContext.viewLiveReplay" />
     <MenuItem fx:id="viewReplaysItem" disable="true" mnemonicParsing="false" onAction="#onViewReplays"
               text="%chat.userContext.viewReplays"/>
-    <MenuItem fx:id="inviteItem" mnemonicParsing="false" disable="true" onAction="#onInviteToGame"
+    <MenuItem fx:id="inviteItem" disable="true" mnemonicParsing="false" onAction="#onInviteToGame"
               text="%chat.userContext.inviteToGame"/>
-    <SeparatorMenuItem fx:id="moderatorActionSeparator" mnemonicParsing="false" />
-    <MenuItem fx:id="kickItem" mnemonicParsing="false" disable="true" onAction="#onKick" text="%chat.userContext.kick"/>
-    <MenuItem fx:id="banItem" mnemonicParsing="false" disable="true" onAction="#onBan" text="%chat.userContext.ban"/>
-    <CustomMenuItem fx:id="avatarPickerMenuItem" hideOnClick="false" mnemonicParsing="false">
+    <SeparatorMenuItem fx:id="moderatorActionSeparator" mnemonicParsing="false" visible="false"/>
+    <MenuItem fx:id="kickGameItem" mnemonicParsing="false" onAction="#onKickGame" text="%chat.userContext.kickGame"
+              visible="false"/>
+    <MenuItem fx:id="kickLobbyItem" mnemonicParsing="false" onAction="#onKickLobby" text="%chat.userContext.kickLobby"
+              visible="false"/>
+
+    <SeparatorMenuItem fx:id="banSeperator" mnemonicParsing="false" visible="false"/>
+
+    <CustomMenuItem fx:id="banItem" mnemonicParsing="false" visible="false">
+      <content>
+        <VBox>
+          <children>
+            <TextField fx:id="reasonText" promptText="%chat.userContext.reason"/>
+            <TextField fx:id="durationText" promptText="%chat.userContext.duration"/>
+            <ChoiceBox fx:id="periodTypeChoiceBox" onAction="#consumer"/>
+            <Button fx:id="banButton" onAction="#onBan" text="%chat.userContext.ban"/>
+            <Label fx:id="successsLabel" text="%chat.userContext.success" visible="false"/>
+          </children>
+        </VBox>
+      </content>
+    </CustomMenuItem>
+    <CustomMenuItem fx:id="avatarPickerMenuItem" hideOnClick="false" mnemonicParsing="false" visible="false">
       <content>
       </content>
       <content>
         <ComboBox fx:id="avatarComboBox" maxWidth="1.7976931348623157E308"/>
       </content>
     </CustomMenuItem>
+
+
   </items>
+
 </ContextMenu>
