--- a/src/main/resources/theme/vault/search/search.fxml
+++ b/src/main/resources/theme/vault/search/search.fxml
@@ -2,12 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="searchRoot" maxHeight="-Infinity" maxWidth="-Infinity"
-      minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.111"
+      minHeight="-Infinity" minWidth="-Infinity" spacing="10.0" xmlns="http://javafx.com/javafx/8.0.121"
       fx:controller="com.faforever.client.vault.search.SearchController">
     <children>
         <VBox fx:id="criteriaPane">
@@ -25,6 +27,9 @@
                         onAction="#onAddCriteriaButtonClicked" text="%query.addCriteria"/>
                 <Button layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onResetButtonClicked" text="%reset"/>
+                <Label text="sort by"/>
+                <ComboBox fx:id="sortProperty"/>
+                <ChoiceBox fx:id="sortOrder"/>
                 <Button fx:id="searchButton" defaultButton="true" mnemonicParsing="false"
                         onAction="#onSearchButtonClicked" styleClass="button-raised" text="%search">
                     <graphic>
@@ -32,6 +37,7 @@
                     </graphic>
                 </Button>
                 <CheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false" text="%vault.replays.displayQuery"/>
+
             </children>
         </HBox>
         <TextField fx:id="queryTextField" maxWidth="1.7976931348623157E308" promptText="%vault.replays.queryPrompt"/>
