Add a compact chat mode
Added options in settings to allow users to change between Extended and Compact for the chat.
Fixes #638

--- a/src/main/resources/theme/settings/settings.fxml
+++ b/src/main/resources/theme/settings/settings.fxml
@@ -126,6 +126,8 @@
                                         <JFXComboBox fx:id="timeComboBox" maxWidth="1.7976931348623157E308"
                                                      onAction="#onTimeFormatSelected" GridPane.columnIndex="1"
                                                      GridPane.rowIndex="4"/>
+                                        <Label text="%settings.chat.chatFormat"/>
+                                        <JFXComboBox fx:id="chatComboBox" onAction="#onChatFormatSelected"/>
                                     </children>
                                 </GridPane>
                             </content>
